--- a/profil.html
+++ b/profil.html
@@ -62,8 +62,11 @@
             <label>Nama:</label><br>
             <input type="text" name="nama"><br>
 
-            <label>Email</label><br>
-            <input type="email" name="email"><br><br>
+            <label>Email:</label><br>
+            <input type="email" name="email"><br>
+
+            <label>Pesan:</label><br>
+            <textarea name="pesan" rows="5" cols="30"></textarea><br><br>
 
             <input type="submit" value="Kirim">
         </form>
@@ -71,4 +74,5 @@
         <h4>Media Sosial :</h4>
         <a href="https://www.linkedin.com/in/dafakumarasahasika/" target="_blank">LinkedIn</a>
     </body>
+
 </html>
