--- a/ets/index.html
+++ b/ets/index.html
@@ -34,14 +34,14 @@
         <div class="container text-center">
             <h2 class="mb-4">Kenapa Memilih Kami?</h2>
             <div class="row justify-content-center">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4">
                     <div class="card card-custom p-4 h-100">
                         <div class="benefit-icon"></div>
                         <h5 class="mt-3">Driver Profesional</h5>
                         <p>Pengemudi berpengalaman dan ramah, siap antar Anda dengan nyaman dan aman.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4">
                     <div class="card card-custom p-4 h-100">
                         <div class="benefit-icon"></div>
                         <h5 class="mt-3">Jadwal Bervariasi</h5>
@@ -63,13 +63,13 @@
         <div class="container">
             <h2 class="text-center mb-3">Apa Kata Penumpang?</h2>
             <div class="row justify-content-center">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4">
                     <div class="card card-custom p-4 h-100 text-center">
                         <blockquote>"Pelayanan cepat, mobil bersih, sopir ramah. Recommended!"</blockquote>
                         <small>- Budi, Surabaya</small>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4">
                     <div class="card card-custom p-4 h-100 text-center">
                         <blockquote>"Titip barang sampai dalam sehari, aman dan cepat!"</blockquote>
                         <small>- Nidya, Sidoarjo</small>
@@ -183,5 +183,6 @@
         <p>&copy; 2025 Jet Travel - Semua Hak Dilindungi</p>
     </div>
 </footer>
+
 
 </html>
