--- a/ets/index.html
+++ b/ets/index.html
@@ -48,7 +48,7 @@
                         <p>Berangkat dapat menyesuaikan kebutuhan Anda.</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4">
                     <div class="card card-custom p-4 h-100">
                         <div class="benefit-icon"></div>
                         <h5 class="mt-3">Antar Barang</h5>
@@ -61,24 +61,24 @@
 
     <section class="py-5 bg-secondary text-white">
         <div class="container">
-            <h2 class="text-center mb-3">Apa Kata Penumpang?</h2>
+            <h2 class="text-center mb-4">Apa Kata Penumpang?</h2>
             <div class="row justify-content-center">
                 <div class="col-md-4 mb-4">
                     <div class="card card-custom p-4 h-100 text-center">
                         <blockquote>"Pelayanan cepat, mobil bersih, sopir ramah. Recommended!"</blockquote>
-                        <small>- Budi, Surabaya</small>
+                        <strong>- Budi, Surabaya</strong>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card card-custom p-4 h-100 text-center">
                         <blockquote>"Titip barang sampai dalam sehari, aman dan cepat!"</blockquote>
-                        <small>- Nidya, Sidoarjo</small>
+                        <strong>- Nidya, Sidoarjo</strong>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4">
                     <div class="card card-custom p-4 h-100 text-center">
                         <blockquote>"Travel terbaik, tinggal pesan dari HP kapanpun dan dimanapun."</blockquote>
-                        <small>- Alex, Solo</small>
+                        <strong>- Alex, Solo</strong>
                     </div>
                 </div>
             </div>
@@ -186,3 +186,4 @@
 
 
 </html>
+
